--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Public\css\style.css">
+    <link rel="stylesheet" href="Public/css/style.css">
     <title>Ohmyfood</title>
 </head>
 <body class="Home">
@@ -29,35 +29,35 @@
    </div>
 </div>
      <header class="header">
-        <div class="header_logo"> <a href="#"> <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="header_logo_pict"></a></div>
+        <div class="header_logo"> <a href="#"> <img src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt=" logo Ohmyfood" class="header_logo_pict"></a></div>
     </header>
     <section class="section_1">
         <div class="section_1_1">
-            <div class="section_1_1_map"><i class="fas fa-map-marker-alt"></i> <form action="" method="GET"><label for="GET-location"></label>
+            <div class="section_1_1_map"><i class="fas fa-map-marker-alt"></i> <form action="/action_page.php" method="GET"><label for=""></label>
                 <input type="text" name="location" value="Paris, Belleville"></form></div>
         </div>
         <div class="section_1_2">
             <div class="section_1_2_title"><h2>Réservez le menu qui vous convient</h2></div>
             <div class="section_1_2_subtitle"><p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p></div>
-            <div class="section_1_2_button"><a href="#ancre"><button class="section_1_2_button_b">Explorer nos restaurants</button></a></div>   
+            <div class="section_1_2_button"><button class="section_1_2_button_b">Explorer nos restaurants</button></div>   
         </div>
     </section>
     <section class="section_2">
         <div class="section_2_1"><h2>Fonctionnement</h2></div>
         <div class="section_2_2"> 
-            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">1</span> <span class="section_2_2_card_s_icon1"><i class="fas fa-mobile-alt"></i></span><span class="section_2_2_card_s_text"><p>Choisissez un restaurant</p></span></div></div>
-            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">2</span> <span class="section_2_2_card_s_icon"><i class="fas fa-list-ul"></i></span><span class="section_2_2_card_s_text1"><p>Composez votre menu</p></span></div></div>
-            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">3</span> <span class="section_2_2_card_s_icon2"><i class="fas fa-store"></i></span><span class="section_2_2_card_s_text"><p>Dégustez au restaurant</p></span></div></div>
+            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">1</span> <span class="section_2_2_card_s_icon1"><i class="fas fa-mobile-alt"></i></span><div class="section_2_2_card_s_text"><p>Choisissez un restaurant</p></div></div></div>
+            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">2</span> <span class="section_2_2_card_s_icon"><i class="fas fa-list-ul"></i></span><div class="section_2_2_card_s_text1"><p>Composez votre menu</p></div></div></div>
+            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">3</span> <span class="section_2_2_card_s_icon2"><i class="fas fa-store"></i></span><div class="section_2_2_card_s_text"><p>Dégustez au restaurant</p></div></div></div>
         </div>
     </section>
     <section class="section_3" id="ancre">
-        <div class="section_3_1"><span class="section_3_1_title"><h2>Restaurants</h2></span></div>
+        <div class="section_3_1"><div class="section_3_1_title"><h2>Restaurants</h2></div></div>
         <div class="section_3_2">
             <div class="section_3_2_cards">
                  <div class="section_3_2_cards_1"> 
-                    <a href="La-palette-du-gout.html"><div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"><div class="new"><p>Nouveau</p></div></div></a>
+                    <a href="La-palette-du-gout.html"><div class="section_3_2_cards_1_pict"><img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"><div class="new"><p>Nouveau</p></div></div></a>
                                 <div class="section_3_2_cards_1_legend"> 
-                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>La palette du gout</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Ménilmontant</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_text"><div class="section_3_2_cards_1_legend_text_title"><h3>La palette du gout</h3></div><div class="section_3_2_cards_1_legend_text_subtitle"><p>Ménilmontant</p></div></div>
                                     <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                                 </div>
                             </div>
@@ -66,9 +66,9 @@
             <div class="section_3_2_cards">
                 <div class="section_3_2_cards_1"> 
                     <a href="La-note-enchantée.html">
-                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"> <div class="new1"><p>Nouveau</p></div></div></a>
+                                <div class="section_3_2_cards_1_pict"><img src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"> <div class="new1"><p>Nouveau</p></div></div></a>
                                 <div class="section_3_2_cards_1_legend"> 
-                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>La note enchantée</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Charonne</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_text"><div class="section_3_2_cards_1_legend_text_title"><h3>La note enchantée</h3></div><div class="section_3_2_cards_1_legend_text_subtitle"><p>Charonne</p></div></div>
                                     <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                                 </div>
                             </div>
@@ -77,9 +77,9 @@
             <div class="section_3_2_cards">
                 <div class="section_3_2_cards_1"> 
                     <a href="A-la-Francaise.html">
-                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div></a>
+                                <div class="section_3_2_cards_1_pict"><img src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div></a>
                                 <div class="section_3_2_cards_1_legend"> 
-                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>A la Francaise</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Cité Rouge</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_text"><div class="section_3_2_cards_1_legend_text_title"><h3>A la Francaise</h3></div><div class="section_3_2_cards_1_legend_text_subtitle"><p>Cité Rouge</p></div></div>
                                     <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                                 </div>
                             </div>
@@ -88,9 +88,9 @@
             <div class="section_3_2_cards">
                 <div class="section_3_2_cards_1"> 
                     <a href="Le-délice-des-sens.html">
-                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div></a>
+                                <div class="section_3_2_cards_1_pict"><img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div></a>
                                 <div class="section_3_2_cards_1_legend"> 
-                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>Le délice des sens</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Folie-Méricourt</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_text"><div class="section_3_2_cards_1_legend_text_title"><h3>Le délice des sens</h3></div><div class="section_3_2_cards_1_legend_text_subtitle"><p>Folie-Méricourt</p></div></div>
                                     <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                                 </div>
                             </div>
@@ -98,12 +98,12 @@
         </div>
     </section>
     <footer class="foot">
-        <div class="foot_logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
+        <div class="foot_logo"><img src="Maquettes_Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
         <div class="foot_list"><ul>
-                                <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <span class="foot_list_text"><p>Proposer un restaurant</p></span></li>
-                                <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <span class="foot_list_text"><p>Devenir partenaire</p></span></li>
-                                <li> <span class="foot_list_text"><p>Mentions légales</p></span></li>
-                                <li> <span class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>Contact</p></a></span></li>
+                                <li><div class="foot_list_icon"><i class="fas fa-utensils"></i></div> <div class="foot_list_text"><p>Proposer un restaurant</p></div></li>
+                                <li><div class="foot_list_icon"><i class="far fa-handshake"></i></div> <div class="foot_list_text"><p>Devenir partenaire</p></div></li>
+                                <li> <div class="foot_list_text"><p>Mentions légales</p></div></li>
+                                <li> <div class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>Contact</p></a></div></li>
 
         </ul></div>
     </footer>
