--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Public\css\style.css">
+    <link rel="stylesheet" href="Public/css/style.css">
     <title>La Palette du Gout</title>
 </head>
 <body class="R1">
@@ -25,28 +25,28 @@
             <div class="R1-header-b2">
                 <a href="#"> 
                     <span class="header_cont_logo">
-                        <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="R1-header-b2-pict">
+                        <img src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt=" logo Ohmyfood" class="R1-header-b2-pict">
                      </span>
                 </a>
             </div>
     </header>
     <section class="R1-menu">
         <header class="R1-menu-header">
-            <img src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant Picture" class="R1-menu-header-pict">
+            <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant Picture" class="R1-menu-header-pict">
         </header>
         <article class="R1-menu-carte">
             <div class="R1-menu-carte-title">
-                <span class="R1-menu-carte-title-text">
-                    <h1>La palette du gout</h1>
-                </span>
-                <div class="heart_anim"><span class="R1-menu-carte-title-heart">
+                <div class="R1-menu-carte-title-text">
+                    <h2>La palette du gout</h2>
+                </div>
+                <div class="heart_anim"><div class="R1-menu-carte-title-heart">
                     <i class="far fa-heart"></i><i class="fas fa-heart"></i>
-                </span></div>
+                </div></div>
             </div>
             <div class="R1-menu-carte-choix">
                 <div class="R1-menu-carte-choix-entrees">
                     <div class="R1-menu-carte-choix-entrees-title">
-                        <h2>ENTREES</h2>
+                        <h3>ENTREES</h3>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
                         <div class="R1-menu-carte-choix-entrees-nom-x" id="p1">
@@ -56,7 +56,7 @@
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Au piment d'Espelette</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>25€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h4>25€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -67,7 +67,7 @@
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et ses copeaux de truffe noire</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox1"><h4>35€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -78,7 +78,7 @@
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Assaisonné à la truffe sur lit de caviar</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>20€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox2"><h4>20€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -87,39 +87,39 @@
                 </div>
                 <div class="R1-menu-carte-choix-entrees">
                     <div class="R1-menu-carte-choix-entrees-title">
-                        <h2>PLATS</h2>
+                        <h3>PLATS</h3>
                         </div>
                             <div class="R1-menu-carte-choix-entrees-nom">
-                                <div class="R1-menu-carte-choix-entrees-nom-x"id="p4">
+                                <div class="R1-menu-carte-choix-entrees-nom-x" id="p4">
                                     <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                         <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Filet de boeuf aux herbes</h3>
                                         </div>
                                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Accompagné de sa ribambelle de légumes</p>
                                             </div>
                                     </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>40€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox3"><h4>40€</h4>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p4">
+                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p5">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Parmentier de queue de boeuf</h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>À la truffe noire sur sa purée de panais</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox4"><h4>35€</h4>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p5">
+                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p6">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Filet de turbot</h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Aux agrumes</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>44€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox5"><h4>44€</h4>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
@@ -128,39 +128,39 @@
                  </div>
                 <div class="R1-menu-carte-choix-entrees">
                     <div class="R1-menu-carte-choix-entrees-title">
-                        <h2>DESSERTS</h2>
+                        <h3>DESSERTS</h3>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p6">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p7">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Paris-Brest</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisité</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>18€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox6"><h4>18€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p7">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p8">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Macaron au chocolat d'exception</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et glace à la vanille de Madagascar</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>22€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox7"><h4>22€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p8">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p9">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Mousse au chocolat</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Au piment d'Espelette et à la truffe noire</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>23€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox8"><h4>23€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -174,12 +174,12 @@
         </article>
      </section>
      <footer class="foot">
-        <div class="foot_logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
+        <div class="foot_logo"><img src="Maquettes_Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
         <div class="foot_list"><ul>
-                                <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <span class="foot_list_text"><p>Proposer un restaurant</p></span></li>
-                                <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <span class="foot_list_text"><p>Devenir partenaire</p></span></li>
-                                <li> <span class="foot_list_text"><p>Mentions légales</p></span></li>
-                                <li> <span class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></span></li>
+                                <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <div class="foot_list_text"><p>Proposer un restaurant</p></div></li>
+                                <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <div class="foot_list_text"><p>Devenir partenaire</p></div></li>
+                                <li> <div class="foot_list_text"><p>Mentions légales</p></div></li>
+                                <li> <div class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></div></li>
 
         </ul></div>
     </footer>
