--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Public\css\style.css">
+    <link rel="stylesheet" href="Public/css/style.css">
     <title>Le délice des sens</title>
 </head>
 <body class="R1">
@@ -25,20 +25,20 @@
             <div class="R1-header-b2">
                 <a href="#"> 
                     <span class="header_cont_logo">
-                        <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="R1-header-b2-pict">
+                        <img src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt=" logo Ohmyfood" class="R1-header-b2-pict">
                      </span>
                 </a>
             </div>
     </header>
     <section class="R1-menu">
         <header class="R1-menu-header">
-            <img src="Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant Picture" class="R1-menu-header-pict">
+            <img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant Picture" class="R1-menu-header-pict">
         </header>
         <article class="R1-menu-carte">
             <div class="R1-menu-carte-title">
-                <span class="R1-menu-carte-title-text">
-                    <h1>Le délice des sens</h1>
-                </span>
+                <div class="R1-menu-carte-title-text">
+                    <h2>Le délice des sens</h2>
+                </div>
                 <div class="heart_anim"><span class="R1-menu-carte-title-heart">
                     <i class="far fa-heart"></i><i class="fas fa-heart"></i>
                 </span></div>
@@ -49,36 +49,36 @@
                         <h2>ENTREES</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p1">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p1">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Tartare de thon</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Assaisonné au yuzu</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>25€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h4>25€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p2">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p2">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Bouchée de homard croustillant</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et sa farandole de petits légumes</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox1"><h4>35€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p3">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p3">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Velouté de cèpes</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Aux truffes</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>20€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox2"><h4>20€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -97,18 +97,18 @@
                                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre" id="creme"><p>Et sa crème de truffe</p>
                                             </div>
                                     </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>40€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox3"><h4>40€</h4>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x"id="p5">
+                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p5">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Langouste rôtie </h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et ses légumes de saison</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox4"><h4>35€</h4>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
@@ -119,7 +119,7 @@
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et sa purée de panais</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>44€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox5"><h4>44€</h4>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
@@ -131,14 +131,14 @@
                         <h2>DESSERTS</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p7">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p7">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Farandole de desserts</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Du chef</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>18€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox6"><h4>18€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -149,7 +149,7 @@
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisitée</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>22€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox7"><h4>22€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -160,7 +160,7 @@
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>À la noisette</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>23€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox8"><h4>23€</h4>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
@@ -174,12 +174,12 @@
         </article>
      </section>
      <footer class="foot">
-        <div class="foot_logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
+        <div class="foot_logo"><img src="Maquettes_Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
         <div class="foot_list"><ul>
-                                <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <span class="foot_list_text"><p>Proposer un restaurant</p></span></li>
-                                <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <span class="foot_list_text"><p>Devenir partenaire</p></span></li>
-                                <li> <span class="foot_list_text"><p>Mentions légales</p></span></li>
-                                <li> <span class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></span></li>
+                                <li><div class="foot_list_icon"><i class="fas fa-utensils"></i></div> <div class="foot_list_text"><p>Proposer un restaurant</p></div></li>
+                                <li><div class="foot_list_icon"><i class="far fa-handshake"></i></div> <div class="foot_list_text"><p>Devenir partenaire</p></div></li>
+                                <li> <div class="foot_list_text"><p>Mentions légales</p></div></li>
+                                <li> <div class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></div></li>
 
         </ul></div>
     </footer>
